--- a/WebRoot/css/style.css
+++ b/WebRoot/css/style.css
@@ -49,6 +49,9 @@ height: 42px;
 padding-left: 10px;
 border-radius: 2px;
 }
+.input-field > input:focus{
+border: 1px solid #1ab394;
+}
 .input-field > select{
 width: 300px;
 height: 42px;
